--- a/styles/main.css
+++ b/styles/main.css
@@ -17,3 +17,23 @@ h1,h2,h3,h4,h5,h6 {
   font-family: "Patua One", serif;
   letter-spacing: 2px;
 }
+
+#movie-schedule {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+img {
+    height: 6cm;
+    width: 4cm;
+}
+h1 {
+    font-size: medium;
+}
+section {
+    display: flex;
+    flex-direction: column;
+    margin: 0 2em;
+    align-items: center;
+    text-align: center;
+}
